# Applied-AI

./: COURSE_OUTLINE.md  create_module2_slides.js  create_slides.py  pyproject.toml
.kilo/plans/: 1776233630986-shiny-mountain.md  (+1 more)
gen-ai-course/11_fine-tuning/04_fine_tuning_projects/fine_tuning_projects/01_chatbot/: README.md  pyproject.toml
gen-ai-course/11_fine-tuning/04_fine_tuning_projects/fine_tuning_projects/01_chatbot/configs/: train_config.yaml
gen-ai-course/11_fine-tuning/04_fine_tuning_projects/fine_tuning_projects/01_chatbot/deploy/: app.py
gen-ai-course/11_fine-tuning/04_fine_tuning_projects/fine_tuning_projects/01_chatbot/notebooks/: 01_custom_chatbot_assistant.ipynb
gen-ai-course/11_fine-tuning/04_fine_tuning_projects/fine_tuning_projects/01_chatbot/scripts/: evaluate.py  prepare_data.py  rollback.py  serve.py  train.py
gen-ai-course/11_fine-tuning/04_fine_tuning_projects/fine_tuning_projects/01_chatbot/src/chatbot_ft/: __init__.py  config.py  data.py  evaluation.py  modeling.py  training.py
gen-ai-course/11_fine-tuning/04_fine_tuning_projects/fine_tuning_projects/01_chatbot/tests/: test_formatting.py
gen-ai-course/14_ai_projects/ep_job_application_agent/: .env.example  INTERVIEW.md  README.md  pyproject.toml
gen-ai-course/14_ai_projects/ep_job_application_agent/infra/: main.bicep
gen-ai-course/14_ai_projects/ep_job_application_agent/src/ep_job_app/: config.py  main.py  models.py
gen-ai-course/14_ai_projects/ep_job_application_agent/src/ep_job_app/agents/: cover_letter_agent.py  filter_agent.py
gen-ai-course/14_ai_projects/ep_job_application_agent/src/ep_job_app/pipelines/: application_pipeline.py
gen-ai-course/14_ai_projects/ep_job_application_agent/src/ep_job_app/tools/: notion_tool.py  scraper.py
gen-ai-course/14_ai_projects/ep_job_application_agent/src/ep_job_app/utils/: logger.py
gen-ai-course/14_ai_projects/ep_job_application_agent/tests/: test_pipeline.py
gen-ai-course/14_ai_projects/real_estate_crm_agent/: .env.example  INTERVIEW.md  README.md  pyproject.toml
gen-ai-course/14_ai_projects/real_estate_crm_agent/infra/: main.bicep
gen-ai-course/14_ai_projects/real_estate_crm_agent/src/real_estate_crm/: config.py  main.py  models.py
gen-ai-course/14_ai_projects/real_estate_crm_agent/src/real_estate_crm/agents/: qualifier.py
gen-ai-course/14_ai_projects/real_estate_crm_agent/src/real_estate_crm/pipelines/: lead_pipeline.py
gen-ai-course/14_ai_projects/real_estate_crm_agent/src/real_estate_crm/tools/: email_tool.py  sms_tool.py
gen-ai-course/14_ai_projects/real_estate_crm_agent/src/real_estate_crm/utils/: logger.py
gen-ai-course/14_ai_projects/real_estate_crm_agent/tests/: test_qualifier.py
gen-ai-course/14_ai_projects/remote_job_ops_engine/: .env.example  .gitignore  INTERVIEW.md  README.md  pyproject.toml
gen-ai-course/14_ai_projects/remote_job_ops_engine/infra/: main.bicep
gen-ai-course/14_ai_projects/remote_job_ops_engine/src/remote_job_ops/: config.py  main.py  models.py
gen-ai-course/14_ai_projects/remote_job_ops_engine/src/remote_job_ops/agents/: classifier.py  resume_generator.py
gen-ai-course/14_ai_projects/remote_job_ops_engine/src/remote_job_ops/pipelines/: job_pipeline.py
gen-ai-course/14_ai_projects/remote_job_ops_engine/src/remote_job_ops/tools/: scraper.py
gen-ai-course/14_ai_projects/remote_job_ops_engine/src/remote_job_ops/utils/: logger.py
gen-ai-course/14_ai_projects/remote_job_ops_engine/tests/: test_pipeline.py
gen-ai-course/14_ai_projects/smart_notion_sync_agent/: .env.example  .gitignore  INTERVIEW.md  README.md  pyproject.toml
gen-ai-course/14_ai_projects/smart_notion_sync_agent/.claude/: settings.json
gen-ai-course/14_ai_projects/smart_notion_sync_agent/infra/: main.bicep
gen-ai-course/14_ai_projects/smart_notion_sync_agent/plans/: implementation_plan.md
gen-ai-course/14_ai_projects/smart_notion_sync_agent/scripts/: check_missing_schemas.py  check_prop_requests.py  debug_dbs.py  debug_tasks_props.py  diagnostic_tasks.py  final_populate_missing.py  link_tasks.py  populate_data.py  populate_leads.py  populate_remaining.py  setup_notion_dbs.py  tasks_final_push.py  ultimate_populate.py  update_db_requests.py  verify_counts.py
gen-ai-course/14_ai_projects/smart_notion_sync_agent/src/notion_sync/: config.py  main.py  models.py
gen-ai-course/14_ai_projects/smart_notion_sync_agent/src/notion_sync/agents/: conflict_resolver.py
gen-ai-course/14_ai_projects/smart_notion_sync_agent/src/notion_sync/pipelines/: __init__.py  notion_sync.py  sync_engine.py
gen-ai-course/14_ai_projects/smart_notion_sync_agent/src/notion_sync/pipelines/slack/: __init__.py  graphs.py  nodes.py  state.py
gen-ai-course/14_ai_projects/smart_notion_sync_agent/src/notion_sync/tools/: __init__.py  google_calendar.py  notion_client.py  slack_client.py
gen-ai-course/14_ai_projects/smart_notion_sync_agent/src/notion_sync/utils/: calendar_mapping.py  logger.py
gen-ai-course/14_ai_projects/smart_notion_sync_agent/tests/: test_slack_poll_node.py  test_sync.py
gen-ai-course/14_ai_projects/tactical_affiliate_funnel/: .env.example  .gitignore  pyproject.toml
gen-ai-course/14_ai_projects/tactical_affiliate_funnel/src/tactical_funnel/: config.py  models.py
gen-ai-course/14_ai_projects/tactical_affiliate_funnel/src/tactical_funnel/agents/: content_generator.py
gen-ai-course/14_ai_projects/tactical_affiliate_funnel/src/tactical_funnel/pipelines/: funnel_pipeline.py
gen-ai-course/14_ai_projects/tactical_affiliate_funnel/src/tactical_funnel/tools/: tracking.py
gen-ai-course/14_ai_projects/tactical_affiliate_funnel/src/tactical_funnel/utils/: logger.py
plans/: project_structure.md
(+299 files in other folders)
