[project]
name = "remote-job-ops-engine"
version = "0.1.0"
description = "Remote job scraper, classifier, resume generator, and auto-apply engine"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "langchain-groq>=0.1.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.0.40",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "notion-client>=2.2.0",
    "pyairtable>=2.2.0",
    "reportlab>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/remote_job_ops"]

[tool.hatch.build.targets.sdist]
include = ["/src"]
